fix page overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@ body {
 	min-height: 100vh;
 	background-color: #42050d;
 	font-family: "Quicksand", sans-serif;
-	overflow: hidden;
+	overflow: auto;
 }
 
 .content {
@@ -27,12 +27,13 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	overflow: hidden;
+	overflow: auto;
+	height: 100vh;
 }
 
 .text {
 	padding: 100px 60px;
-	font-size: 1.5rem;
+	font-size: 24px;
 	font-weight: 700;
 	color: var(--font-color-main);
 }
@@ -42,7 +43,7 @@ body {
 }
 
 .form-title {
-	font-size: 1.5rem;
+	font-size: 24px;
 	font-weight: 700;
 	color: var(--font-color-main);
 	margin-bottom: 10px;
@@ -51,9 +52,9 @@ body {
 .form-container {
 	background-color: #a73a3228;
 	padding: 30px 200px 30px 60px;
-	box-shadow: 0px 12.9px 4.8px -36px rgba(0, 0, 0, 0.133),
-		0px 23.5px 13.4px -36px rgba(0, 0, 0, 0.263),
-		0px 34.1px 32.3px -36px rgba(0, 0, 0, 0.388),
+	box-shadow: 0px 12.9008px 4.8px -36px rgba(0, 0, 0, 0.133),
+		0px 23.5008px 13.4px -36px rgba(0, 0, 0, 0.263),
+		0px 34.1008px 32.2992px -36px rgba(0, 0, 0, 0.388),
 		0px 47px 107px -36px rgba(0, 0, 0, 0.51);
 	margin-bottom: 45px;
 }
